[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/enemies/g/g_standing.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/enemy_stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/enemies/enemy_template.gd" type="Script" id=3]
[ext_resource path="res://assets/enemies/attack_controller.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/enemies/wander_controller.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/enemies/player_attack_zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/enemies/player_detection_zone.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/enemies/soft_collision.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="AnimationNodeStateMachine" id=2]

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CapsuleShape2D" id=13]
radius = 8.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 3 )

[node name="EnemyStats" parent="." instance=ExtResource( 2 )]
max_health = 16

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, -36 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, -61 )
collision_layer = 16
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 4 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -61 )

[node name="Hitbox" type="Area2D" parent="HitboxPivot"]
position = Vector2( 20, 0 )
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPivot/Hitbox"]
rotation = 1.5708
shape = SubResource( 13 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="PlayerAttackZone" parent="." instance=ExtResource( 6 )]

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[node name="AttackController" parent="." instance=ExtResource( 4 )]

[node name="DelayTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
